# studious_maximus

./: .env.example  .gitignore  Cargo.toml  Dockerfile.mcp  Dockerfile.sync  README.md  docker-compose.yml
crates/app/: Cargo.toml  README.md
crates/app/.sqlx/: query-13f3faf5adb48282d50dab30c69fb030dee6998f140f35aca8212ef0f2c301c0.json  query-230fa54ab323270cd1b31f151fa9b635ceb3fb3137ab9ce4eeec16a5af9cad19.json  query-254ee2ddcb2642d4a86ddb9963ca928ee54b0039d34e543f067504e2f7641fdf.json  query-db025a86c1d91b60d8fcf4424af7b4753c40655a8a4f59c5db01ab224bcb3912.json
crates/app/fixtures/: assignments.sql  courses.sql  students.sql  submissions.sql
crates/app/migrations/: 20250330193857_create_students.sql  20250406125517_create_courses.sql  20250409234709_create_assignments.sql  20250424214047_create_submissions.sql
crates/app/src/: lib.rs  lms.rs  models.rs  prelude.rs  query.rs  support.rs  tests.rs
crates/app/src/lms/: canvas.rs  dto.rs  mod.rs  noop.rs
crates/app/src/query/: assignments_query.rs  courses_query.rs  students_query.rs  submissions_query.rs  update_assignments.rs  update_courses.rs  update_students.rs  update_submissions.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/mcp_server/: Cargo.toml  README.md  instructions.txt
crates/mcp_server/src/: lib.rs  main.rs  models.rs  render.rs  school.rs
crates/mcp_server/templates/: student.hbs  students.hbs
crates/server/: Cargo.toml
script/: run_sync.sh  sync_entrypoint.sh
