[workspace]
members = [
  "crates/app",
  "crates/server"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.44.1", features = ["full"] }
