[workspace]
members = [
  "crates/app", "crates/cli", "crates/mcp_server",
  "crates/server"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
rmcp = { version = "0.1", features = [
  "server",
  "transport-io",
  "transport-sse-server"
] }
rmcp-macros = { version = "0.1" }
schemars = { version = "0.8" }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
