[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
mockall = "0.13.1"

[[bin]]
name = "load_students"
path = "bin/load_students.rs"

[[bin]]
name = "load_courses"
path = "bin/load_courses.rs"

[[bin]]
name = "load_assignments"
path = "bin/load_assignments.rs"

[features]
default = ["all"]
read = []
write = []
all = ["read", "write"]
