[package]
name = "mcp_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stdio"
path = "bin/stdio.rs"

[[bin]]
name = "sse"
path = "bin/sse.rs"

[dependencies]
handlebars.workspace = true
rmcp.workspace = true
rmcp-macros.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

app = { path = "../app", features = ["read"] }
